# sre-agent-isucon13

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  azd_output.txt  azure.yaml
docs/: architecture.md  deployment.md  hooks.md  sre-agent-api.md  structure.md
infra/: main.bicep  main.bicepparam  resources-sreagent.bicep  resources-system.bicep
infra/modules/: aca.bicep  cross-rg-rbac.bicep  monitoring.bicep  network.bicep  sre-agent.bicep  ssh-keygen.bicep  vm.bicep
isucon-mcp-server/: Dockerfile  go.mod  go.sum  main.go
knowledge-base/: benchmark-runbook.md  isupipe-optimization-guide.md
provisioning/: bootstrap.sh  setup-bench.sh  setup-contest.sh
scripts/: post-configure-agent.sh  post-provision.sh  provision-vm-benchmark.sh  provision-vm-contest.sh  provision-vm.sh  setup-ssh-keys.sh  sreagent-clear.sh  sreagent-run.sh  sreagent-setup.sh  srectl  srectl.py  watch-sreagent.sh  yaml-to-api-json.py
scripts/lib/: sreagent-common.sh
sre-config/L100/agents/: isucon.yaml
sre-config/L200/agents/: benchmark-runner.yaml  code-optimizer.yaml  isucon.yaml  performance-investigator.yaml
sre-config/agents/: benchmark-runner.yaml  code-optimizer.yaml  performance-investigator.yaml
sre-config/connectors/: ssh-mcp.yaml
sre-config/knowledge-base/: server-topology.md
srectl/: pyproject.toml
srectl/src/srectl/: __init__.py  __main__.py  cli.py  client.py  models.py  output.py
srectl/src/srectl/commands/: agent.py  knowledge.py  memory.py  skill.py  tool.py  trigger.py
ssh-mcp-server/: Dockerfile  go.mod  go.sum  main.go
(+29 files in other folders)
