[project]
name = "srectl"
version = "0.1.0"
description = "CLI for managing Azure SRE Agent resources"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
srectl = "srectl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.bandit]
exclude_dirs = [".venv"]
skips = ["B404", "B603", "B310"]
